config/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: index-api-ingress
  namespace: index
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.index-it.app
      secretName: index-api-tls
  rules:
    - host: "api.index-it.app"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: index-api
                port:
                  number: 80
